<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
	<!-- 制作绩点查询的表格头 -->
	<LinearLayout
		android:id="@+id/gpa_listView_head"
		android:layout_width="match_parent"
		android:layout_height="30dp"
	    android:orientation="horizontal"
		>
		<TextView
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/serial_number"
			android:textColor="@color/colorBlack"
			android:textStyle="bold"/>

		<ImageView
			android:layout_width="1dp"
			android:layout_height="30dp"
			android:background="@color/colorBlack"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:layout_weight="6"
			android:gravity="center"
			android:text="@string/subject_name"
			android:textColor="@color/colorBlack"
			android:textStyle="bold"/>

		<ImageView
			android:layout_width="1dp"
			android:layout_height="30dp"
			android:background="@color/colorBlack"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:layout_weight="2"
			android:gravity="center"
			android:text="@string/grade_score"
			android:textColor="@color/colorBlack"
			android:textStyle="bold"/>

		<ImageView
			android:layout_width="1dp"
			android:layout_height="30dp"
			android:background="@color/colorBlack"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:layout_weight="3"
			android:gravity="center"
			android:text="@string/grade"
			android:textColor="@color/colorBlack"
			android:textStyle="bold"/>

		<ImageView
			android:layout_width="1dp"
			android:layout_height="30dp"
			android:background="@color/colorBlack"/>
	</LinearLayout>

</LinearLayout>