<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

	<RadioGroup
		android:id="@+id/bottom_bar_radioGraoup"
		android:layout_width="match_parent"
		android:layout_height="@dimen/radio_group_height"
		android:layout_alignParentBottom="true"
		android:background="@color/radioGroupBg"
		android:orientation="horizontal">

		<RadioButton
			android:id="@+id/bottom_bar_scheduleBtn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="true"
			android:drawableTop="@drawable/icon_menu_btn_schedule"
			android:gravity="center"
			android:paddingTop="5dp"
			android:text="@string/schedule"
			android:textColor="@color/radiogroup_btn_bgcolor"/>

		<RadioButton
			android:id="@+id/bottom_bar_learnBtn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:drawableTop="@drawable/icon_menu_btn_learn"
			android:gravity="center"
			android:paddingTop="5dp"
			android:text="@string/learn"
			android:textColor="@color/radiogroup_btn_bgcolor"/>

		<RadioButton
			android:id="@+id/bottom_bar_lifeBtn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:drawableTop="@drawable/icon_menu_btn_life"
			android:gravity="center"
			android:paddingTop="5dp"
			android:text="@string/life"
			android:textColor="@color/radiogroup_btn_bgcolor"/>

		<RadioButton
			android:id="@+id/bottom_bar_queryBtn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:drawableTop="@drawable/icon_menu_btn_query"
			android:gravity="center"
			android:paddingTop="5dp"
			android:text="@string/query"
			android:textColor="@color/radiogroup_btn_bgcolor"/>


		<RadioButton
			android:id="@+id/bottom_bar_myBtn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:drawableTop="@drawable/icon_menu_btn_my"
			android:gravity="center"
			android:paddingTop="5dp"
			android:text="@string/my"
			android:textColor="@color/radiogroup_btn_bgcolor"/>
	</RadioGroup>

	<FrameLayout
		android:id="@+id/main_frameLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/bottom_bar_radioGraoup"/>

</RelativeLayout>