<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="200dp"
              android:background="@mipmap/bg_input"
              android:orientation="vertical">

	<EditText
		android:id="@+id/learn_login_gpa_input"
		android:layout_width="match_parent"
		android:layout_height="@dimen/fragment_input_heigth"
		android:layout_marginEnd="@dimen/fragment_input_heigth"
		android:layout_marginLeft="@dimen/fragment_input_heigth"
		android:layout_marginRight="@dimen/fragment_input_heigth"
		android:layout_marginStart="@dimen/fragment_input_heigth"
		android:layout_marginTop="@dimen/fragment_input_heigth"
		android:background="@drawable/bg_input_text"
		android:hint="@string/input_studentId"
		android:inputType="number"
		android:paddingLeft="@dimen/input_text_padding"
		android:paddingStart="@dimen/input_text_padding"/>


	<CheckBox
		android:id="@+id/learn_login_gpa_rememberLogin"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/fragment_title_marginTop"
		android:layout_marginTop="@dimen/fragment_twoInput_height"
		android:background="@color/colorcheckBg"
		android:checked="false"
		android:layout_gravity="center_horizontal"
		android:padding="@dimen/input_text_radio"
		android:text="@string/rememberXh"
		android:textColor="@color/colorBlack"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal">

		<Button
			android:id="@+id/leanrn_login_gap_loginBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/fragment_input_inner_padding"
			android:gravity="center"
			android:text="@string/query"/>

		<Button
			android:id="@+id/learn_login_gpa_loadBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/fragment_input_inner_padding"
			android:gravity="center"
			android:text="@string/noNet"/>
	</LinearLayout>
</LinearLayout>